test/examples/invalid/test-not_finish.js

exports['not finished'] = function (test){
  test.ok(true);
  
  process.exit();
}


